--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <title>Frontend Mentor | Order summary card</title>
+    <title>Marc Sanchez | Order summary card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
